test/spec_vectors/select/fail/module_30.wat
(module (func (select (i32.const 1) (i32.const 1) (f64.const 1)) (drop)))